# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt
brain_games/engine/: cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  games_func.py  games_functions.py  help_functions.py  texts.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  games.py  play.py  questions.py
khristinar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
khristinar_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
