[tool.poetry]
name = "KHRISTINAR_brain_games"
version = "0.1.4"
description = ""
authors = ["Khristina Rustanovich <khristina.analytics@gmail.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

