[tool.poetry]
name = "KhristinaR_brain_games"
version = "0.1.3"
description = ""
authors = ["Khristina Rustanovich <khristina.analytics@gmail.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = ">=3.3"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

