[tool.poetry]
name = "Khristinar"
version = "0.1.5"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

